--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/Alicja67/czat/issues"
   },
-  "homepage": "https://github.com/Alicja67/czat#readme"
+  "homepage": "https://github.com/Alicja67/czat#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "2.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
+  }
 }
